Test de la clase Incursion(hay que acabarlos porque hay que cambiar muchas cosas) e Item